force-app/main/default/objects/Master_Transaction__c/Master_Transaction__c.object-meta.xml
<CustomObject>
    <description>This object contains the details of payments collected from customer in form of advance payment via cash/credit card/cheque or any other mode of payment. This object also contains patient credits as well.</description>
    <label>Other Transactions</label>
    <nameField>
        <displayFormat>OT-{0000}</displayFormat>
        <label>Other Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>