force-app/main/default/objects/Master_Transaction__c/fields/Complete_discount_to_be_utilized__c.field-meta.xml
<CustomField>
    <fullName>Complete_discount_to_be_utilized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete discount to be utilized</label>
    <type>Checkbox</type>
</CustomField>