force-app/main/default/objects/Master_Transaction__c/fields/Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>Discount_Code__c</fullName>
    <label>Discount Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>