force-app/main/default/objects/Master_Transaction__c/fields/Interest_Late_Filling_Charges__c.field-meta.xml
<CustomField>
    <fullName>Interest_Late_Filling_Charges__c</fullName>
    <label>Interest/Late Filling Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>