force-app/main/default/objects/Master_Transaction__c/fields/Payment_By__c.field-meta.xml
<CustomField>
    <fullName>Payment_By__c</fullName>
    <label>Payment By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>