force-app/main/default/objects/Master_Transaction__c/fields/Payment_Received_By__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_By__c</fullName>
    <label>Payment By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>