force-app/main/default/objects/Master_Transaction__c/fields/Payment_Transaction_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the other Transaction with the Payment Transaction Line items.</description>
    <label>Payment Transaction Line Item</label>
    <referenceTo>Payment_Transaction_Line_Item__c</referenceTo>
    <relationshipLabel>Other Transactions</relationshipLabel>
    <relationshipName>Other_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>