force-app/main/default/objects/Master_Transaction__c/fields/Reason_Of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Reason_Of_Payment__c</fullName>
    <label>Reason for Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applied Payment</fullName>
            </value>
            <value>
                <fullName>Unallocated Payment</fullName>
            </value>
            <value>
                <fullName>ERA/EOB Payment</fullName>
            </value>
            <value>
                <fullName>Interest/Late Filing Charges</fullName>
            </value>
            <value>
                <fullName>Discounted Payment</fullName>
            </value>
            <value>
                <fullName>Discounted Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>