force-app/main/default/objects/Master_Transaction__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <label>Reference Number</label>
    <type>TextArea</type>
</CustomField>