force-app/main/default/objects/Master_Transaction__c/fields/Refrence_Key__c.field-meta.xml
<CustomField>
    <fullName>Refrence_Key__c</fullName>
    <label>Refrence Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>