force-app/main/default/objects/Master_Transaction__c/fields/SquareUp_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>SquareUp_Order_ID__c</fullName>
    <externalId>true</externalId>
    <label>Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>