force-app/main/default/objects/Master_Transaction__c/fields/Type_of_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Allocation__c</fullName>
    <label>Type of Allocation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discounted</fullName>
            </value>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>UnAllocated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>