force-app/main/default/objects/Master_Transaction__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User information when Payment By = User</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Other_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>