force-app/main/default/objects/Master_Transaction__c/recordTypes/Allocated_Transaction.recordType-meta.xml
<RecordType>
    <fullName>Allocated_Transaction</fullName>
    <active>true</active>
    <label>Allocated Transaction</label>
</RecordType>