force-app/main/default/objects/Master_Transaction__c/recordTypes/Unallocated_Transaction.recordType-meta.xml
<RecordType>
    <fullName>Unallocated_Transaction</fullName>
    <active>true</active>
    <label>Unallocated Transaction</label>
</RecordType>