force-app/main/default/objects/Master_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Unallocated_Amount__c</columns>
    <columns>Allocated_Amount__c</columns>
    <columns>Total_Remaining_Unallocated_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>